[package]
name = "blossom-lfs"
version = "0.1.2"
edition = "2021"
description = "Git LFS custom transfer agent for Blossom blob storage with chunking support"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MonumentalSystems/BlossomLFS"
keywords = ["git", "lfs", "blossom", "nostr", "storage"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Blossom protocol client & auth
blossom-rs = { version = "0.2", default-features = false, features = ["client"] }

# Async runtime
tokio = { version = "1.39", features = ["fs", "io-std", "macros", "rt-multi-thread", "sync"]}

# Nostr key parsing
nostr = "0.35"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
simplelog = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
wiremock = "0.6"
proptest = "1.5"
tokio-test = "0.4"
axum = "0.7"