[package]
name = "blossom-lfs"
version = "0.4.2"
edition = "2021"
description = "Git LFS daemon for Blossom blob storage with chunking and lock support"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MonumentalSystems/BlossomLFS"
keywords = ["git", "lfs", "blossom", "nostr", "storage"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
iroh = ["blossom-rs/iroh-transport", "blossom-rs/pkarr-discovery", "dep:iroh"]

[dependencies]
blossom-rs = { version = "0.4.1", default-features = false, features = ["client"] }
tokio = { version = "1.39", features = ["fs", "io-std", "macros", "rt-multi-thread", "sync"] }
nostr = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
urlencoding = "2"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1"
futures-core = "0.3"
tokio-stream = "0.1"
iroh = { version = "0.97", optional = true }

[dev-dependencies]
tempfile = "3.10"
wiremock = "0.6"
proptest = "1.5"
tokio-test = "0.4"
axum = "0.7"
blossom-rs = { version = "0.4.1", features = ["server"] }
reqwest = { version = "0.12", features = ["json"] }
